--- a/05-JupyterLab-Deployment/jupyterlab-efs-storageclass.yaml
+++ b/05-JupyterLab-Deployment/jupyterlab-efs-storageclass.yaml
@@ -4,9 +4,9 @@ metadata:
   name: jupyterlab-efs
 provisioner: efs.csi.aws.com
 parameters:
-  provisioningMode: efs-ap  # Access Point mode required
-  fileSystemId: fs-05b0878594b65b722  # Your EFS filesystem ID
-  accessPointId: fsap-057127cf2eb141f76  # Access point ID for JupyterLab
+  provisioningMode: efs-ap
+  fileSystemId: fs-05b0878594b65b722
+  accessPointId: fsap-0d6696f5b0ec83465  # Use the new Access Point ID for JupyterLab
   directoryPerms: "700"
   gidRangeStart: "1000"
   gidRangeEnd: "2000"
